# assessment_task_fixed_width_files

./: .gitignore  README.MD  pyproject.toml
data/: example.txt
src/cli/: cli.py
src/models/: base.py  fixed_width_file.py  footer.py  header.py  transaction.py
src/services/: field_locker.py  file_reader.py  file_writer.py
src/tests/: conftest.py  test_fix_width_file.py
src/utils/: constraints.py  exceptions.py  logger.py
